--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.font-title-medium {
+  font-size: 16px;
+}
+.font-title-small {
+  font-size: 12px;
+}
+.font-subtitle-small {
+  font-size: 10px;
+}
