--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ code {
     monospace;
 }
 
+a {
+  color: #0277bd;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .font-title-medium {
   font-size: 16px;
 }
